# pybind11_samples

./: .gitignore  README.md
sample1_add_op/: CMakeLists.txt  add.cpp  test.py
sample2_add_op/: CMakeLists.txt
sample2_add_op/include/: add_op.h
sample2_add_op/src/: CMakeLists.txt  add_op.cpp  add_op_python.cpp  sample_test.cpp  test.py
sample3_torch_op/: CMakeLists.txt  README.md  main.cpp  setup.py  version.py
sample3_torch_op/mmdet.egg-info/: PKG-INFO  SOURCES.txt
